--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -27,6 +27,8 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
+      flex-direction: row;
     }
 
     .panel {
@@ -44,6 +46,9 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -57,7 +62,15 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open-active > *:first-child { transform: translateY(0); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open-active > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
@@ -68,10 +81,12 @@
 
     .panel p:nth-child(2) {
       font-size: 4em;
+      flex: 3;
     }
 
     .panel.open {
       font-size: 40px;
+      flex: 5;
     }
 
   </style>
@@ -106,7 +121,28 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
+    function handleClick(){
+      // if you want multiple panels open at a time:
+      // this.classList.toggle('open');
 
+      // if you want only one panel open at a time:
+      if(this.classList.contains('open')) {
+        this.classList.remove('open');
+      } else {
+        panels.forEach(panel => panel.classList.remove('open'));
+        this.classList.toggle('open');
+      }
+    }
+
+    toggleActive = ({ propertyName, target }) => {
+      if(propertyName === 'font-size') {
+        target.classList.toggle('open-active');
+      }
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', handleClick));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
 
 
