--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -9,14 +9,51 @@
 <body>
 
   <form class="search-form">
-    <input type="text" class="search" placeholder="City or State">
+    <input type="text" class="search" id="search" placeholder="City or State">
     <ul class="suggestions">
       <li>Filter for a city</li>
       <li>or a state</li>
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+	const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+	const cities = [];
+	fetch(endpoint)
+		.then(blob => blob.json())
+		.then(data => cities.push(...data));
+
+	const findMatches = (match, options) => {
+		const regex = new RegExp(match, 'gi');
+		const results = options.filter(({ city, state }) =>
+			city.match(regex) || state.match(regex)
+		);
+		return results;
+	}
+
+	const numberWithCommas = x => x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+
+	const displayMatches = text => {
+		const matches = findMatches(text, cities);
+		const hl = new RegExp(text, 'gi');
+
+		const html = matches.map(({ city, state, population }) => {
+			const cityName = city.replace(hl, `<span class="hl">${text}</span>`);
+			const stateName = state.replace(hl, `<span class="hl">${text}</span>`);
+			return `
+				<li>
+					<span class="name">${cityName}, ${stateName}</span>
+					<span class="population">${numberWithCommas(population)}</span>
+				</li>
+			`
+		}).join('');
+
+		suggestions.innerHTML = html;
+	};
+
+	const searchbar = document.querySelector('#search');
+	const suggestions = document.querySelector('.suggestions');
+	searchbar.addEventListener('keyup', e => displayMatches(e.target.value));
 
 </script>
 </body>
